# command-line-rust-clis

./: README.md
catr_03/: Cargo.toml
catr_03/src/: lib.rs  main.rs
echor/tests/: cli.rs
echor_02/src/: main.rs
headr_04/: Cargo.toml
headr_04/src/: lib.rs  main.rs
hello/: Cargo.toml
uniqr_06/: Cargo.toml
uniqr_06/src/: lib.rs
wcr_05/: Cargo.toml
wcr_05/src/: lib.rs  main.rs  stats.rs
