[package]
name = "uniqr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
assert_cmd = "2.0.14"
clap = "4.5.4"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
tempfile = "3.10.1"
